test: allow Java 8
I accidently used a Java 11+ method